<resources>
    <string name="app_name">ChitChat</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="gkinfofix">GKinfoFix</string>
    <string name="posts">Posts</string>
    <string name="_300">300</string>
    <string name="following">Following</string>
    <string name="_400">400</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="_250">250</string>
    <string name="followers">Followers</string>
    <string name="GK">I Am GK</string>
    <string name="i_am_an_android_Developer">I am an Android Developer</string>
    <string name="https_gkinfofix_com">https://gkinfofix.com</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">Description</string>
    <string name="change_photo">Change Photo</string>
    <string name="private_information">PRIVATE INFORMATION</string>
    <string name="username">username</string>
    <string name="display_name">display name</string>
    <string name="website">Website</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="register_a_new_account">REGISTER A NEW ACCOUNT</string>
    <string name="password">Password</string>
    <string name="please_wait">Please Wait</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="auth_success">Successful Authentication</string>
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="profile_fragment">Profile</string>
    <string name="calling_activity">Calling Activity</string>
    <string name="profile_activity">Profile Activity</string>
</resources>
